crates/uitest/fixtures/ty_check/recv_arm_return_type_mismatch.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/recv_arm_return_type_mismatch.fe
---
error[8-0000]: type mismatch
   ┌─ recv_arm_return_type_mismatch.fe:13:32
   │
13 │         Withdraw { amount } -> u32 {
   │                                ^^^ expected `bool`, but `u32` is given

error[8-0000]: type mismatch
   ┌─ recv_arm_return_type_mismatch.fe:14:13
   │
14 │             0
   │             ^ expected `bool`, but `{integer}` is given

error[8-0000]: type mismatch
   ┌─ recv_arm_return_type_mismatch.fe:19:13
   │
19 │             false
   │             ^^^^^ expected `u64`, but `bool` is given

error[8-0043]: recv arm return type annotation required
   ┌─ recv_arm_return_type_mismatch.fe:18:9
   │
18 │         Deposit { amount } {
   │         ^^^^^^^^^^^^^^^^^^ return type must be annotated as `u64` to match the msg variant
